--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8"/>
+    <title>잔재미코딩</title>
+    <meta name="description" content="잔재미코딩 온라인 강의 리스트"/>
+    <meta name="keywords" content="Online Lecture"/>
+    <meta name="author" content="Dave Lee"/>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <!-- user-scalable 을 사용하지 않는 디바이스를 위해, maximun-scale/minimum-scale 설정을 하는 것입니다-->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+
+    <!-- Open Graph (Facebook, Linkedin)-->
+    <!-- https://ourcodeworld.com/public-media/articles/articleocw-56d1a6901b773.png -->
+    <meta property="og:type" content="website"/>
+    <!-- https://ogp.me/#types -->
+    <meta property="og:title" content="잔재미코딩"/>
+    <meta property="og:description" content="잔재미코딩 온라인 강의 리스트"/>
+    <meta property="og:image" content="img/fun-coding-mark.png"/>
+    <meta property="og:url" content="https://www.fun-coding.org"/>
+    <meta property="og:site_name" content="잔재미코딩"/>
+
+
+    <!-- twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <!-- card 종류 : summary, photo, player-->
+    <meta name="twitter:title" content="잔재미코딩 온라인 강의 사이트입니다.">
+    <meta name="twitter:description" content="잔재미코딩에서 만든 온라인 강의 리스트를 공유하는 웹페이지입니다.">
+    <meta name="twitter:image" content="img/fun-coding-mark.png">
+    <meta name="twitter:url" content="https://www.fun-coding.org">
+    <meta name="twitter:creator" content="Boseong Choi">
+
+    <!-- 일반적인 favicon 설정 -->
+    <link rel="icon" href="img/fun-coding.ico">
+    <!-- 아이폰용 favicon -->
+    <link rel="apple-touch-icon" href="img/fun-coding.ico">
+    <!--IE favicon -->
+    <link rel="short icon" type="image/x-icon" href="img/fun-coding.ico">
+    <!-- CSS Reset-->
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- https://fontawesome.com/start -->
+    <script src="https://kit.fontawesome.com/49ceb5efb7.js" crossorigin="anonymous"></script>
+    <!-- Spoca Han Sans Neo: https://spoqa.github.io/spoqa-han-sans/ko-KR/ -->
+    <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 <body>
-
+<h1>안녕하세요 잔재미코딩입니다.</h1>
+<!-- <script src="js/main.js"></script> -->
 </body>
 </html>
