--- a/index.html
+++ b/index.html
@@ -48,7 +48,20 @@
 
 </head>
 <body>
-<h1>안녕하세요 잔재미코딩입니다.</h1>
+<!-- CSS 작명 규칙 : BEM (Block Element Modifier)-->
+<header>
+    <div class="inner">
+        <div class="head-container">
+            <div class="header-brand"><a href="https://www.fun-coding.org">잔재미코딩</a></div>
+            <div class="header-blog"><a href="https://www.fun-coding.org/daveblog.html">잔재미코딩 블로그 모음</a></div>
+        </div>
+    </div>
+</header>
+
+<!-- 메인 이미지 섹션 -->
+<section class="main"></section>
+<footer></footer>
+
 <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
